# pulse-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: index.html
examples/: 01_hello_world.py  02_vocabulary_validation.py  03_use_cases.py  04_binary_encoding.py  05_error_handling.py  06_security_features.py  07_cli_usage.py  08_tls_transport.py
medium-articles/: article-01-200-billion-gap.md  article-02-patent-deadlock.md  article-03-what-is-human-what-is-ai.md  article-04-mcp-a2a-acp-none-solve-real-problem.md  article-05-40-percent-enterprise-zero-common-language.md  article-06-tcp-ip-moment-for-ai.md  article-07-what-money-means-for-humans-and-ai.md
pulse/: __init__.py  adapter.py  benchmarks.py  cli.py  client.py  encoder.py  exceptions.py  message.py  security.py  server.py  tls.py  validator.py  version.py  vocabulary.py
pulse-transactions/: README.md
scripts/: build_vocabulary.py  gen_remaining.py  generate_vocabulary.py
tests/: __init__.py  conftest.py  test_adapter.py  test_cli.py  test_client_server.py  test_compact_encoder.py  test_encoder.py  test_message.py  test_security.py  test_tls.py  test_validator.py  test_vocabulary.py
