[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-protocol"
version = "0.5.0"
description = "Universal semantic protocol for AI-to-AI communication"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["ai", "protocol", "communication", "agents", "semantic", "multi-agent"]
authors = [
    {name = "Sergey Klein", email = "pulse@example.com"}
]
maintainers = [
    {name = "Sergey Klein", email = "pulse@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "pylint>=2.15.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/pulseprotocolorg-cyber/pulse-python"
Documentation = "https://github.com/pulseprotocolorg-cyber/pulse-python#readme"
Repository = "https://github.com/pulseprotocolorg-cyber/pulse-python"
"Bug Reports" = "https://github.com/pulseprotocolorg-cyber/pulse-python/issues"
Changelog = "https://github.com/pulseprotocolorg-cyber/pulse-python/blob/master/CHANGELOG.md"

[project.scripts]
pulse = "pulse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["pulse"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
